@@ -1,4 +1,8 @@
 0.76, 2006-05-02
+- bugfix: port submit: integrate patch from the ports tree: modify util_diff
+  to work correctly for p5-/py-/ruby- ports (i.e. PKGNAMEPREFIX is not empty).
+  This fixes both detection of ORIG_DIR and Synopsis field generation for such
+  ports (PR: ports/70156, Cheng-Lung Sung)
 - bugfix: port create: use author's name and e-mail address from ~/.porttools
   when creating a new port (PR: ports/70300, Janos Mohacsi)
 - bugfix: port submit: avoid CC'ing PRs with maintainership changes to
